# plantconvert

./: .cruft.json  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  Makefile  environment.yml  pyproject.toml  readme.md  setup.py
.github/workflows/: on-push.yml
data/: DA1_Average_MAP_90.opf.REMOVED.git-id  coffee.opf
demo/: _const.py  examples.ipynb  simple_plant.bgeom  simple_plant.gltf
demo/strawberry/: generate_opf_strawberry.py
doc/: doc.md
docs/: Makefile  conf.py  doc.md  index.rst  installation.rst  make.bat  usage.rst
docs/source/: conf.py  index.rst
docs/source/install/: index.rst  linux.rst  windows.rst
docs/source/references/: index.rst  openalea.plantconvert.gltf.rst  openalea.plantconvert.opf.rst  openalea.plantconvert.vtk.rst
docs/source/user/: index.rst  quick_start.rst  read_opf_and_write_gltf.nblink
src/plantconvert/: __init__.py  binary_tools.py  geometry.py  material.py  matrix.py  plantconvert.py  util.py
src/plantconvert/gltf/: __init__.py  buffer_tools.py  reader.py  writer.py
src/plantconvert/opf/: __init__.py  const.py  reader.py  writer.py
src/plantconvert/vtk/: __init__.py  reader.py  writer.py
test/: compare.csv  const.py  test_init.py  test_read_opf.py  test_write_gltf.py  test_write_mtg.py  test_write_opf.py  test_write_vtk.py
tests/: compare.py  test_read_gltf.py  test_read_vtk.py
