[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering"
]
description = "OpenAlea.PlantConvert is an OpenAlea package to convert a plant to / from a `mtg`format to a wide range of other formats"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "OpenAlea.PlantConvert"
readme = "README.md"

[tool.coverage.run]
branch = true

[tool.mypy]
strict = false

[tool.ruff]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1",
  # pydocstyle: numpy convention
  "D107",
  "D203",
  "D212",
  "D213",
  "D402",
  "D413",
  "D415",
  "D416",
  "D417"
]
# Black line length is 88, but black does not format comments.
line-length = 110
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.setuptools]
packages = ["plantconvert"]

[tool.setuptools_scm]
write_to = "plantconvert/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
